--- a/src/components/OptionsBtn/optionsbtn.css
+++ b/src/components/OptionsBtn/optionsbtn.css
@@ -1,5 +1,6 @@
 .options-btn {
-  position: absolute;
+  /* position: absolute; */
+  position: fixed;
   top: 1vh;
   right: 1vh;
   padding: 1vh;
@@ -21,7 +22,7 @@
   background-color: #ADD8E6;
 }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   .options-icon {
     padding: 2vh;
   }
@@ -29,4 +30,4 @@
   .options-btn {
     margin: 1vh;
   }
-}
+} */
